# mk-script

./: .gitignore  README.md  mk
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/cross-compile/: README.md  mk-all.sh
examples/cross-compile/scripts/: MinGW64-toolchain.cmake
examples/cross-compile/sources/: CMakeLists.txt  main.cpp
examples/cross-platform-smile/: README.md  mk-all.sh  mk-android.sh  mk-iphone.sh
examples/cross-platform-smile/scripts/: Android.cmake  FindGlew.cmake  FindGlfw.cmake  FindPng.cmake  MacOSX.cmake  Platform.cmake  README.md  Unix.cmake  Utils.cmake  Windows.cmake  iOS-toolchain.cmake  iOS.cmake  prepare-glew.sh  prepare-glfw.sh  prepare-glm.sh  prepare-libpng-android.sh  prepare-libpng-apple.sh
examples/cross-platform-smile/sources/: CMakeLists.txt
examples/cross-platform-smile/sources/android/: .gitignore  CMakeLists.txt  README.md  gradle.properties  settings.gradle
examples/cross-platform-smile/sources/android/app/: build.gradle
examples/cross-platform-smile/sources/android/app/src/main/: AndroidManifest.xml
examples/cross-platform-smile/sources/android/app/src/main/cpp/: native-lib.cpp  shaders.glsl.h
examples/cross-platform-smile/sources/android/app/src/main/java/com/stoned_fox/smile/: MainActivity.java  RendererWrapper.java  SmileCore.java  SmileSurfaceView.java
examples/cross-platform-smile/sources/android/app/src/main/res/layout/: activity_main.xml
examples/cross-platform-smile/sources/android/app/src/main/res/values/: themes.xml
examples/cross-platform-smile/sources/android/app/src/main/res/values-night/: themes.xml
examples/cross-platform-smile/sources/android/gradle/wrapper/: gradle-wrapper.properties
examples/cross-platform-smile/sources/apple/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  MainViewController.m  README.md  ShaderTypes.h  Shaders.metal  main.m  static-asserts.cpp
examples/cross-platform-smile/sources/apple/Resources/ios/: Info.plist
examples/cross-platform-smile/sources/apple/Resources/ios/Base.lproj/: Main.storyboard
examples/cross-platform-smile/sources/apple/Resources/osx/Base.lproj/: Main.storyboard
examples/cross-platform-smile/sources/desktop/: CMakeLists.txt  README.md  main.cpp
examples/cross-platform-smile/sources/desktop/shaders/: pshader-2d.glsl  vshader-2d.glsl
examples/cross-platform-smile/sources/opengl/: CMakeLists.txt  README.md  api.cpp  errors.cpp  shader.cpp
examples/cross-platform-smile/sources/opengl/include/: api.hpp  errors.hpp  shader.hpp
examples/cross-platform-smile/sources/smile/: CMakeLists.txt  README.md  imageutils.cpp  imageutils.hpp  smile.cpp
examples/cross-platform-smile/sources/smile/android/: logging.cpp
examples/cross-platform-smile/sources/smile/apple/: logging.m
examples/cross-platform-smile/sources/smile/desktop/: logging.cpp
examples/cross-platform-smile/sources/smile/include/smile/: log.hpp  logging.h  smile.h
examples/simple-cli-tool/: README.md  mk-all.sh
examples/simple-cli-tool/sources/: CMakeLists.txt  main.cpp
plugins/: commons.sh  git-branch-cleanup  prepare  setup-properties  toolchain
plugins/prepare-scripts/: prepare-doxygen.sh  prepare-exhale.sh  prepare-grpc.sh  prepare-poxy.sh  prepare-rapidjson.sh
plugins/toolchain-scripts/: Gcc-14.1.0-toolchain.cmake  Utils.cmake  Wine-MSVC-toolchain.cmake  fix-compile-commands.py
tests/: test.sh
tests/test-default-run/: run.sh
tests/test-default-run/sources/: CMakeLists.txt
tests/test-source-option/: CMakeLists.txt  flags.sh  main.cpp
tests/test-tocmake-option/: run.sh
tests/test-tocmake-option/sources/: CMakeLists.txt  main.cpp
tests/test-toolchain-option/: run.sh
tests/test-toolchain-option/sources/: CMakeLists.txt  Test-toolchain.cmake  main.cpp
